main: comment out set_resource_limits on non-Unix

https://bugzilla.gnome.org/show_bug.cgi?id=342926